[tool.poetry]
name = "EXP-RTL"
version = "0.1.0"
description = ""
authors = ["Capybasilisk <capybasilisk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
axelrod = "^4.8.0"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
